# veronica

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  agentfield.yaml  go.mod  go.sum  pyproject.toml
.factory/: init.sh  services.yaml
.factory/skills/notify-worker/: SKILL.md
.opencode/agents/: perm-guard.md  perm_guard.md  scaffold.md
cmd/cli/: commands.go  main.go
cmd/veronica/: main.go
cmd/veronicactl/: commands.go  main.go
cmd/veronicad/: main.go
docs/: architecture.txt  ebpf-capabilities.md  examples.md
internal/af/: notify_test.go  publisher.go  skills.go
internal/agent/: agent.go  agent_test.go  integration_test.go  types.go
internal/classifier/: classifier.go  classifier_test.go
internal/coordinator/: classifier.go  classifier_test.go  coordinator.go  coordinator_test.go  filter.go  filter_test.go  integration_test.go  toolkit.go  toolkit_test.go  types.go
internal/ebpf/: event.go  manager.go  manager_test.go  maps.go
internal/event/: event.go
internal/llm/: client.go  client_test.go  types.go
internal/nats/: publisher.go  publisher_test.go  server.go  server_test.go  tools.go  tools_test.go
internal/state/: store.go  store_test.go
internal/tool/: registry.go  registry_test.go  schema.go  schema_test.go  types.go
internal/ws/: server.go  server_test.go
lima/: veronica.service  veronica.yaml
src/veronica/: agent.py  config.py  llm.py  mcp_server.py  opencode.py  tools.py  watcher.py
tests/: test_agent.py  test_base_agent.py  test_config.py  test_opencode.py  test_protocol.py
(+46 files in other folders)
