[project]
name = "veronica"
version = "0.1.0"
description = "Veronica host agents and CLI"
requires-python = ">=3.12"
dependencies = [
    "msgspec>=0.19",
    "nats-py>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.15",
]

[project.scripts]
veronica = "veronica.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veronica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0",
]
